# tani_checker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: example.csv  example.toml
site/: package.json
site/src/: App.tsx
src/: config.rs  lib.rs  main.rs  pattern.rs
src/pattern/: coins.rs  coins22.rs
