[package]
name = "tani_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
fancy-regex = "0.8.0"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
