[package]
name = "tani_checker"
version = "0.1.0"
edition = "2021"
description = "筑波大学の卒業要件チェッカー"
rust-version = "1.58.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# wasm
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
fancy-regex = "0.8.0"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
wasm-bindgen = "0.2"
