[package]
name = "tani_checker"
version = "0.1.0"
edition = "2021"
description = "筑波大学の卒業要件チェッカー"
rust-version = "1.58.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# wasm
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "3.2.25", features = ["derive"] }
csv = "1.1.6"
fancy-regex = "0.12.0"
regex = "1.7.3"
serde = { version = "1.0.225", features = ["derive"] }
toml = "0.5.11"
wasm-bindgen = "0.2.102"
